<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/navigation_group">
        <item
            android:id="@+id/nav_summary"
            android:title="@string/navigation_menu_summary" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/navigation_menu_statistics" />
        <item
            android:id="@+id/nav_details"
            android:title="@string/navigation_menu_details" />
    </group>

    <group
        android:id="@+id/other_group">
        <item
            android:id="@+id/nav_export"
            android:title="@string/navigation_menu_export" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/navigation_menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/navigation_menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/navigation_menu_exit" />
    </group>

</menu>
