<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_roameo_image"
        android:src="@drawable/roameo"
        android:contentDescription="@string/contDesc_Roameo_logo"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/about_roameo_image"
        android:layout_alignBottom="@id/about_roameo_image"
        android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="12sp"
        android:text="@string/app_slogan"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_roameo_version"
        android:textSize="12sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/about_roameo_image"
        android:text="@string/app_version_string"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_roameo_credits"
        android:textSize="12sp"
        android:paddingStart="20dp"
        android:layout_below="@id/about_roameo_version"
        android:text="@string/app_about_author"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_roameo_summary"
        android:layout_below="@id/about_roameo_credits"
        android:padding="20dp"
        android:text="@string/app_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_privacy"
        android:textColor="@color/colorAccent"
        android:text="@string/privacy_policy"
        android:layout_below="@id/about_roameo_summary"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>
</RelativeLayout>