<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/export_from"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="20dp"
            android:text="@string/number_placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/start_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/button"
            android:text="@string/export_calendar_icon"
            android:textColor="#eee"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/export_to"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="20dp"
            android:text="@string/number_placeholder"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.joanzapata.iconify.widget.IconButton
            android:id="@+id/end_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/button"
            android:text="@string/export_calendar_icon"
            android:textColor="#eee"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/export_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_gravity="center"
            android:checked="false"
            android:text="@string/export_all_sessions" />

    </GridLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number_checkbox"
        android:checked="true"
        android:layout_gravity="center"
        android:text="@string/export_phone_numbers"/>

</LinearLayout>