<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/session_count"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/summary_sessions" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_step_count"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/summary_total_steps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_duration"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="10dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/summary_total_duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/average_step_count"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="10dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/summary_avg_steps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/average_duration"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="10dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/summary_avg_duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/average_pace"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingEnd="10dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/summary_avg_pace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="10dp"
            android:text="@string/summary_max_steps" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/max_step_count"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingEnd="10dp"
            android:text="@string/summary_max_duration" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/max_duration"
            android:text="@string/number_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>