<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:background="@drawable/session_stat_item_bg"
    tools:ignore="RtlSymmetry">

    <com.joanzapata.iconify.widget.IconTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number"
        android:text="@string/number_placeholder"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="2">
        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/icon_clock"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_time"
            android:text="@string/number_placeholder"
            android:textColor="@color/colorPrimaryDark"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/icon_chart"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_steps"
            android:text="@string/number_placeholder"
            android:textColor="@color/colorPrimaryDark"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_hourglass"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_duration"
            android:text="@string/number_placeholder"
            android:textColor="@color/colorPrimaryDark"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/icon_speedometer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_pace"
            android:text="@string/number_placeholder"
            android:textColor="@color/colorPrimaryDark"/>
    </GridLayout>
</LinearLayout>