<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/contDesc_Roameo_logo"
        android:paddingStart="60dp"
        android:paddingTop="30dp"
        android:src="@drawable/roameo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_since"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/number_placeholder"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/summary_layout" />

    </LinearLayout>
</LinearLayout>